# aegis-hwsim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  codeql.yml  crates-publish.yml
docs/: architecture.md  persona-authoring.md  scenario-authoring.md  visual-verification.md
docs/evidence/: visual-verify-aegis-boot-stick-2026-04-29.metadata.json  visual-verify-empty-stick-2026-04-29.metadata.json
docs/research/: INDEX.md  README.md  arxiv-papers.md  recent-projects.md
docs/research/registry/: SCHEMA.json  papers.yaml  projects.yaml  sources.yaml
firmware/test-keyring/: OVMF_VARS_test_pk.fd  README.md
personas/: asus-zenbook-14-oled.yaml  dell-xps-13-9320.yaml  framework-laptop-12gen.yaml  hp-elitebook-845-g10.yaml  lenovo-thinkpad-t440p-tpm12.yaml  qemu-custom-pk-sb.yaml  qemu-disabled-sb.yaml  qemu-setup-mode-sb.yaml  qemu-smoke-no-tpm.yaml
schemas/: persona.schema.json
scripts/: audit-no-test-keys.sh  publish-if-new.sh  visual-verify-boot.sh
src/: coverage_grid.rs  doctor.rs  lib.rs  loader.rs  ovmf.rs  persona.rs  qemu.rs  scenario.rs  serial.rs  smbios.rs  swtpm.rs  test_keyring.rs
src/scenarios/: attestation_roundtrip.rs  common.rs  kexec_refuses_unsigned.rs  mod.rs  mok_enroll_alpine.rs  qemu_boots_ovmf.rs  signed_boot_ubuntu.rs
tests/: fuzz_invocation.rs  loads_real_personas.rs  qemu_boots_ovmf_smoke.rs  schema_roundtrip.rs
